Basic handlebars and css implemented. Up next is creating major functionality.

--- a/grocery-list/views/layouts/index.hbs
+++ b/grocery-list/views/layouts/index.hbs
@@ -1,8 +1,10 @@
-<form class="add-item" action="index.html" method="post">
-  <input class="input" placeholder="Add item" type="text">
-  <button type="button" class="submit">Record for posterity</button>
-</form>
-
-<h1 class="the-list">The List</h1>
-
-<ol>Here be the list.</ol>
+<!doctype html>
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="http://localhost:3000/stylesheets/style.css" />
+    <title>Handlebars demo</title>
+  </head>
+  <body>
+    {{{body}}}
+  </body>
+</html>
