grocery-list done. Up next: review. olympians done. Up next: review

--- a/grocery-list/views/main.hbs
+++ b/grocery-list/views/main.hbs
@@ -1,12 +1,12 @@
 <div class="container">
-  <h1>What are you shopping for today?</h1>
+  <h1>What do you need?</h1>
   <form class="add-item-form" method="POST" >
     <input type="text"
            placeholder="I desperately need..."
            name="item"/>
     <button>And so it shall be!</button>
   </form>
-  <h1>Here is your list thus far:</h1>
+  <h1 class="list-lead-in">Your list thus far:</h1>
   <ol class="grocery-list">
     {{#each groceries}}
       <li>{{this}}</li>
