--- a/grocery-list/public/stylesheets/style.css
+++ b/grocery-list/public/stylesheets/style.css
@@ -4,9 +4,45 @@ body {
 }
 
 a {
-  color: #00B7FF;
+  background-color: hsla(215, 100%, 55%, 1);
+  color: white;
+  padding: 5px 5px;
+  text-decoration: none !important;
 }
 
 div {
-  color: blue;
+  align-items: center;
+  background-color: hsla(215, 100%, 55%, 1);
+  border: 2px solid hsla(215, 100%, 55%, 1);
+  border-radius: 10px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+}
+
+form input {
+  border: 2px solid cornflowerblue;
+  border-radius: 6px;
+  font-weight: bold;
+  height: 30px;
+  padding: 3px 5px;
+  width: 200px;
+}
+
+form button {
+  background-color: hsla(229, 100%, 55%, 1);
+  border: 1px solid white;
+  border-radius: 6px;
+  box-shadow: 0px 1px 1px rgba(50, 50, 50, 0.75);
+  color: white;
+  font-weight: 600;
+  height: 30px;
+  padding: 3px 5px;
+}
+
+.list-lead-in {
+  border-bottom: 3px solid white;
+  padding-bottom: 20px;
+  margin-bottom: 5px;
 }
