--- a/grocery-list/views/layouts/index.hbs
+++ b/grocery-list/views/layouts/index.hbs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="http://localhost:3000/stylesheets/style.css" />
-    <title>Handlebars demo</title>
+    <title>Listmania</title>
   </head>
   <body>
     {{{body}}}
