Successful response to humanoid choice. Up next: robotron mind and post request.

--- a/tic-tac-toe/views/index.handlebars
+++ b/tic-tac-toe/views/index.handlebars
@@ -1,9 +1,21 @@
+<div class="epic-lead-in">
+  <h5>Long ago, on a playground far, far away...</h5>
+  <h4>a little humanoid named Tim04305 played a game...</h4>
+  <h3>a game of tic-tac-toe to end all tic-tac-toeing...</h3>
+  <h2>His opponent? The nefarious Robotron.</h2>
+  <h4>Tim04305 never ticked a tack or tacked a toe again...</h4>
+  <h1>Are you brave enough to go tic-tac-toe-to-toe with Robotron?</h1>
+  <h2>I warn you, he has bested many humanoids before you...</h2>
+</div>
 <div class="gameboard">
   {{#each boxes}}
-    <div class="box {{@index}}">
-      {{#if this}}
-        {{this}}
-      {{/if}}
-    </div>
+    <form class="box {{@index}}" action="/" method="POST">
+      <input type="hidden" name="indexClicked" value={{@index}} >
+      <input class="submit" type="submit">
+      {{markBox this}}
+    </form>
   {{/each}}
+  {{#if isRobotronsMove}}
+    <button class="robotrons-move">Make your move, robotron!</div>
+  {{/if}}
 </div>
