--- a/tic-tac-toe/public/stylesheets/style.css
+++ b/tic-tac-toe/public/stylesheets/style.css
@@ -17,7 +17,13 @@ body {
   width: 130px;
 }
 
-.claimedBox {
+.claimed-box {
+  border: 2px solid black;
+  height: 164px;
+  width: 130px;
+}
+
+.unclickable {
   border: 2px solid black;
   height: 164px;
   width: 130px;
