--- a/tic-tac-toe/views/index.handlebars
+++ b/tic-tac-toe/views/index.handlebars
@@ -1,23 +1,51 @@
-<div class="epic-lead-in">
-  <h2>I warn you, he has bested many humanoids before you...</h2>
-</div>
-<div class="gameboard">
-  {{#each boxes}}
-    {{#if (or (equal this 'robotron') (equal this 'humanoid')) }}
-      <div class="claimedBox">{{markBox this}}</div>
-    {{else}}
-      <form class="box" action="/" method="POST">
-        <input type="hidden" name="indexClicked" value={{@index}} >
-        <button class="humanoidMove" type="submit">test</button>
-      </form>
-    {{/if}}
-  {{/each}}
-  {{#if isRobotronsMove}}
-    <form class="robotronsMove" action="/" method="POST">
-      <button class="robotronMove" type="submit">
-        I will not go gently into that dark night!
+{{#if victor}}
+
+  <div class="champions-banner">{{victor}} reigns supreme!</div>
+  <form class="restart-game" action="/restart-game" method="POST">
+    <button class="restart" type="submit">
+      Zounds! New Game.
+    </button>
+  </form>
+
+{{else}}
+
+  <div class="epic-lead-in">
+    <h2>Tic-Tac-Throwdown</h2>
+    <div class="opponent-declaration">
+      <div class="introducing">Your opponent:</div>
+      <div class="champion-of-evil">robotron!!#!#%</div>
+      <div class="mugshot"></div>
+    </div>
+  </div>
+  <div class="gameboard">
+    {{#each boxes}}
+      {{#if (or (equal this 'robotron') (equal this 'humanoid')) }}
+        <div class="claimed-box">{{markBox this}}</div>
+      {{else}}
+        {{#if ../isRobotronsMove}}
+          <div class="unclickable"></div>
+        {{else}}
+          <form class="box" action="/" method="POST">
+            <input type="hidden" name="indexClicked" value={{@index}} >
+            <button class="humanoid-move" type="submit">test</button>
+          </form>
+        {{/if}}
+      {{/if}}
+    {{/each}}
+
+    {{#if isRobotronsMove}}
+    <form class="robotrons-move" action="/" method="POST">
+      <button class="robotron-move" type="submit">
+        Do your worst, Robotron!!
       </button>
     </form>
-  {{/if}}
+    {{/if}}
 
-</div>
+    <form class="restart-game" action="/restart-game" method="POST">
+      <button class="restart" type="submit">
+        Zounds! New Game.
+      </button>
+    </form>
+  </div>
+
+{{/if}}
