--- a/tic-tac-toe/public/stylesheets/style.css
+++ b/tic-tac-toe/public/stylesheets/style.css
@@ -1,30 +1,145 @@
 body {
-  color: green;
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+}
+
+/**************/
+/*            */
+/*   victor   */
+/*            */
+/**************/
+
+.champions-banner {
+  border-bottom: 3px solid black;
+  color: black;
+  font-size: 40px;
+  padding: 5px;
+  margin: 30px;
+}
+
+/********************/
+/*                  */
+/*   regular play   */
+/*                  */
+/********************/
+
+.epic-lead-in {
+  align-items: center;
+  display: flex;
+}
+
+.mugshot {
+  background-image: url('../images/grass-lawn-green-wooden-6069.jpg');
+  background-size: cover;
+  border: 1px solid black;
+  border-radius: 10000px;
+  height: 85px;
+  margin: 7px;
+  width: 85px;
+}
+
+.opponent-declaration {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-top: 7px;
+}
+
+.opener {
+  border-bottom: 2px solid hsl(190, 50%, 50%);
+  font-size: 25px;
+  font-weight: 600;
+}
+
+.introducing {
+  margin-top: 7px;
 }
 
 .gameboard {
+  align-items: flex-start;
   display: flex;
   flex-wrap: wrap;
-  height: 500px;
+  height: 492px;
+  justify-content: center;
+  margin: 15px;
   width: 500px;
 }
 
 .box {
-  border: 2px solid black;
+  align-items: center;
+  border: none;
+  display: flex;
+  font-size: 100px;
+  font-weight: bold;
+  height: 164px;
+  justify-content: center;
+  padding: 0px;
+  width: 130px;
+}
+
+.box:nth-child(odd) {
+  background: hsl(145, 50%, 50%);
   height: 164px;
   width: 130px;
 }
 
-.claimed-box {
-  border: 2px solid black;
+.box:nth-child(even) {
+  background: hsl(130, 50%, 50%);
+  height: 164px;
+  width: 130px;
+}
+
+.humanoid-move {
+  background-color: transparent;
+  border: none;
+  border-radius: 7px;
+  height: 164px;
+  width: 130px;
+}
+
+.claimed {
   height: 164px;
   width: 130px;
 }
 
 .unclickable {
-  border: 2px solid black;
   height: 164px;
   width: 130px;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.buttons form {
+  margin: 10px;
+}
+
+.buttons button {
+  border: none;
+  border-radius: 7px;
+  box-shadow: 2px 4px 5px 0px rgba(148,138,148,1);
+  color: white;
+  padding: 10px;
+}
+
+.robotrons-move {
+  background-color: hsl(270, 50%, 50%);
+}
+
+.restart {
+  background-color: hsl(230, 50%, 50%);
+  border: none;
+  border-radius: 7px;
+  box-shadow: 2px 4px 5px 0px rgba(148,138,148,1);
+  color: white;
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
 }
