--- a/tic-tac-toe/views/layouts/main.handlebars
+++ b/tic-tac-toe/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
-    <title>Tic-tac, motherfucker</title>
+    <title>Tic-tac</title>
 </head>
 <body>
 
